--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "homepage": "https://github.com/LISBON11/fit-bot#readme",
   "devDependencies": {
     "@eslint/js": "^10.0.1",
+    "@types/fluent-ffmpeg": "^2.1.28",
     "@types/jest": "^30.0.0",
     "@types/node": "^25.3.0",
     "@typescript-eslint/eslint-plugin": "^8.56.0",
@@ -53,10 +54,15 @@
     "typescript-eslint": "^8.56.0"
   },
   "dependencies": {
+    "@grammyjs/conversations": "^2.1.1",
     "@prisma/client": "^6.8.0",
+    "fluent-ffmpeg": "^2.1.3",
+    "grammy": "^1.40.0",
     "ioredis": "^5.4.0",
+    "openai": "^6.22.0",
     "pino": "^9.0.0",
     "pino-pretty": "^13.0.0",
-    "zod": "^3.24.0"
+    "zod": "^3.25.76",
+    "zod-to-json-schema": "^3.25.1"
   }
 }
