feat(stage-5): complete stage 5 refactoring and optimizations
- Add Redis distributed lock for concurrent requests
- Extract NLU parsing and disambiguation logic into reusable helpers
- Implement safe conversational typing indicator loops
- Add graceful shutdown handling for DB and Redis connections
- Split Docker Compose into prod and dev environments
- Configure GitHub Actions CI pipeline
- Setup integration testing environment with Jest and Prisma
- Add global fallback for outdated callback queries
- Implement exponential backoff retry wrapper for OpenAI APIs
- Fix timezone handling for relative dates

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
     "test:watch": "NODE_OPTIONS='--experimental-vm-modules' jest --watch",
     "test:coverage": "NODE_OPTIONS='--experimental-vm-modules' jest --coverage",
+    "test:integration": "NODE_OPTIONS='--experimental-vm-modules' jest --config jest.integration.config.mjs",
     "db:migrate": "prisma migrate dev",
     "db:generate": "prisma generate",
     "db:seed": "prisma db seed",
@@ -55,6 +56,7 @@
     "typescript-eslint": "^8.56.0"
   },
   "dependencies": {
+    "@grammyjs/auto-chat-action": "^0.1.1",
     "@grammyjs/conversations": "^2.1.1",
     "@prisma/client": "^6.8.0",
     "fluent-ffmpeg": "^2.1.3",
