--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,5 +26,15 @@ services:
       timeout: 5s
       retries: 5
 
+  bot:
+    build: .
+    env_file: .env
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    restart: unless-stopped
+
 volumes:
   pgdata:
