--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,16 +1,9 @@
 {
-    "extends": "./tsconfig.json",
-    "compilerOptions": {
-        "rootDir": ".",
-        "noEmit": true
-    },
-    "include": [
-        "src/**/*",
-        "tests/**/*",
-        "prisma/**/*"
-    ],
-    "exclude": [
-        "node_modules",
-        "dist"
-    ]
+  "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "rootDir": ".",
+    "noEmit": true
+  },
+  "include": ["src/**/*", "tests/**/*", "prisma/**/*", "*.mjs"],
+  "exclude": ["node_modules", "dist"]
 }
