--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "db:migrate": "prisma migrate dev",
     "db:generate": "prisma generate",
     "db:seed": "prisma db seed",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "postinstall": "lefthook install"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -48,6 +49,7 @@
     "eslint-plugin-prettier": "^5.5.5",
     "jest": "^29.7.0",
     "jest-ts-webcompat-resolver": "^1.0.1",
+    "lefthook": "^2.1.1",
     "prettier": "^3.8.1",
     "prisma": "^6.8.0",
     "ts-jest": "^29.4.6",
