--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-jest": "^29.15.0",
     "eslint-plugin-prettier": "^5.5.5",
     "jest": "^29.7.0",
+    "jest-mock-extended": "^4.0.0",
     "jest-ts-webcompat-resolver": "^1.0.1",
     "lefthook": "^2.1.1",
     "prettier": "^3.8.1",
