--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
   "homepage": "https://github.com/LISBON11/fit-bot#readme",
   "devDependencies": {
     "@eslint/js": "^10.0.1",
-    "@types/fluent-ffmpeg": "^2.1.28",
     "@types/jest": "^29.5.14",
     "@types/node": "^25.3.0",
     "@typescript-eslint/eslint-plugin": "^8.56.0",
@@ -59,10 +58,10 @@
     "typescript-eslint": "^8.56.0"
   },
   "dependencies": {
+    "@deepgram/sdk": "^4.11.3",
     "@grammyjs/auto-chat-action": "^0.1.1",
     "@grammyjs/conversations": "^2.1.1",
     "@prisma/client": "^6.8.0",
-    "fluent-ffmpeg": "^2.1.3",
     "grammy": "^1.40.0",
     "ioredis": "^5.4.0",
     "openai": "^6.22.0",
