refactor: remove OpenAI mentions and migrate to Deepgram STT
- Remove OpenAI/Whisper STT implementation and tests
- Add Deepgram STT implementation and tests
- Clean up environment variables and configuration for OpenAI
- Update STT interface and related services

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,37 @@
 # Telegram Bot
 BOT_TOKEN=your_telegram_bot_token
 
-# OpenAI
-OPENAI_API_KEY=your_openai_api_key
+# OpenAI SDK используется через DeepSeek-совместимый API (без замены SDK)
+# NLU: парсинг тренировок через DeepSeek V3 (deepseek-chat)
+# Получить: https://platform.deepseek.com → API Keys
+DEEPSEEK_API_KEY=your_deepseek_api_key
 
-# Database
-DB_PASSWORD=fitbot_dev
-DATABASE_URL=postgresql://fitbot:fitbot_dev@localhost:5432/fitbot
+# Deepgram (используется для STT — распознавания голосовых сообщений)
+# Получить API-ключ: https://console.deepgram.com → $200 бесплатного кредита
+DEEPGRAM_API_KEY=your_deepgram_api_key
 
-# Redis
-REDIS_PASSWORD=redis_dev
-REDIS_URL=redis://:redis_dev@localhost:6379
+# --- База данных ---
+# Используем Supabase (managed PostgreSQL, бесплатно до 500MB)
+# Получить URL: https://supabase.com → Project → Settings → Database
+#
+# Transaction Pooler (порт 6543) — для runtime-запросов бота
+DATABASE_URL=postgresql://postgres.[project-ref]:[password]@aws-0-eu-central-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1
+
+# Direct connection (порт 5432) — для prisma migrate deploy
+# Settings → Database → Connection string → Direct
+DIRECT_URL=postgresql://postgres.[project-ref]:[password]@aws-0-eu-central-1.supabase.com:5432/postgres
+
+# --- Redis ---
+# Redis работает в Docker на том же VPS
+REDIS_PASSWORD=your_strong_redis_password
+REDIS_URL=redis://:your_strong_redis_password@redis:6379
 
 # Logging
 LOG_LEVEL=info
 
-# Environment
+# Environment (для production укажите 'production')
 NODE_ENV=development
 
-# Publishing
+# Publishing (ID чата или канала для публикации тренировок)
+# Для канала: -100XXXXXXXXXX (получить: добавь @username_to_id_bot в канал)
 PUBLISH_CHAT_ID=your_chat_or_channel_id
