--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@deepgram/sdk": "^4.11.3",
     "@grammyjs/auto-chat-action": "^0.1.1",
     "@grammyjs/conversations": "^2.1.1",
+    "@grammyjs/storage-redis": "^2.5.1",
     "@prisma/client": "^6.8.0",
     "grammy": "^1.40.0",
     "ioredis": "^5.4.0",
