--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,7 +10,7 @@ services:
       retries: 5
 
   bot:
-    image: ghcr.io/lisbon11/fit-tel-bot:latest
+    image: ghcr.io/lisbon11/fit-bot:latest
     pull_policy: always
     env_file: .env
     depends_on:
