fix(deps): allow lefthook install to fail gracefully in CI
Since lefthook requires a .git directory to configure hooks, it fails during Docker builds or environments where .git is absent. Adding '|| true' allows the 'postinstall' script to fail gracefully without breaking the build.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "db:generate": "prisma generate",
     "db:seed": "prisma db seed",
     "db:studio": "prisma studio",
-    "postinstall": "lefthook install"
+    "postinstall": "lefthook install || true"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
